--- a/references.bib
+++ b/references.bib
@@ -16,3 +16,40 @@
   year={2002},
   publisher={John Wiley \& Sons}
 }
+
+@book{freeman2011,
+  title={Discrete-time Signals},
+  author={Dennis, Freeman und Mahajan, Sanjoy},
+  year={2002},
+  url={https://ocw.mit.edu/courses/6-003-signals-and-systems-fall-2011/},
+  publisher={MIT}
+}
+
+@book{FILTERSWEB07,
+  author = "Julius O. Smith",
+  title = "Introduction to Digital Filters with Audio Applications",
+  url = "https://ccrma.stanford.edu/\~jos/filters/",
+  year = {2007},
+  note = "online book, accessed 2024"
+}
+
+@article{liski2019converting,
+  title={Converting series biquad filters into delayed parallel form: Application to graphic equalizers},
+  author={Liski, Juho and Bank, Bal{\'a}zs and Smith, Julius O and V{\"a}lim{\"a}ki, Vesa},
+  journal={IEEE Transactions on Signal Processing},
+  volume={67},
+  number={14},
+  pages={3785--3795},
+  year={2019},
+  url={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8723568},
+  publisher={IEEE}
+}
+
+@inproceedings{holmes2015improving,
+  title={Improving the robustness of the iterative solver in state-space modelling of guitar distortion circuitry},
+  author={Holmes, Ben and van Walstijn, Maarten},
+  booktitle={Proc. of the 18th International Conference on Digital Audio Effects, Trondheim, Norway},
+  url={https://dafx.de/paper-archive/2015/DAFx-15\_submission\_18.pdf},
+  pages={49--56},
+  year={2015}
+}
