--- a/references.bib
+++ b/references.bib
@@ -53,3 +53,11 @@
   pages={49--56},
   year={2015}
 }
+
+ @misc{wiki:mantisse,
+   author = "Wiktionary",
+   title = "Mantisse --- Wiktionary{,} Das freie Wörterbuch",
+   year = "2023",
+   url = "https://de.wiktionary.org/w/index.php?title=Mantisse&oldid=9662009",
+   note = "[Online; abgerufen am 25. Oktober 2024]"
+ }
