--- a/lesson1.tex
+++ b/lesson1.tex
@@ -382,9 +382,9 @@ Der Modulo kann verwendet werden um eine Zeit in 24 Stunden Format in 12 Stunden
 {\displaystyle \sum _{k=m}^{n}a_{k}=\sum _{m\leq k\leq n}a_{k}=a_{m}+a_{m+1}+\dotsb +a_{n}.}
 \end{equation}
 
-\todo[]{summe erklärungen, beispiel.}
+\todo[]{summe erklärungen, beispiel. Praxisbezug. Beschreibung des ausgangssignals bei einem Mixer, DSF synthesis, diskrete fourier transf. }
 
-\todo[]{prod}
+\todo[]{prod. Beispiel filter Kaskadieren (produkte)}
 
 \begin{equation}
 {\displaystyle \prod _{i=1}^{6}i^{2} =  1\cdot 4\cdot 9\cdot 16\cdot 25\cdot 36}
@@ -463,7 +463,7 @@ $$ \frac{a^n} {b^n} = \left(\frac{a} {b} \right)^n. \: b \neq 0.$$
 $$ x = d\cdot 10^e$$
 
 \begin{itemize}
-    \item $d$: Mantisse
+    \item $d$: Mantisse\footnote{ von Lateinisch 'Zugabe' oder 'Gewinn'. Siehe \cite{wiki:mantisse.}}
     \item $e$: Exponent
 \end{itemize}
 }
