python, some plot stuff etc

--- a/Anhang_A.tex
+++ b/Anhang_A.tex
@@ -1,6 +1,9 @@
 %!TEX root = main.tex
 \chapter{Anhang}
-\subsection{Griechisches Alphabet}
+
+\input{pythonCheat}
+
+\section*{Griechisches Alphabet}
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|p{7cm}|}
