--- a/lesson2.tex
+++ b/lesson2.tex
@@ -128,8 +128,25 @@ cos(x) = cos(-x)
 \end{equation}
 
 \section{$e^x$}
+
+\begin{figure}[H]
+	\centering
+	\input{python/exp_versions.pgf}
+	\caption{Die exponentialfunktion mit verschiedenen multiplikatoren im Exponenten.}
+	\label{fig:expVersions}
+\end{figure}
+
 \todo{TODO}
+
 \section{Sinc}
+
+\begin{figure}[H]
+	\centering
+	\input{python/sincAsSum.pgf}
+	\caption{Die sinc funktioon angenähert durch eine Summe von Kosiunus Funktionen.}
+	\label{fig:sincAsSum}
+\end{figure}
+
 \todo{TODO}
 \section{Rauschen}
 \todo{TODO}
