--- a/main.tex
+++ b/main.tex
@@ -454,7 +454,7 @@ literate={ϵ}{$\epsilon$}1
 
 \newpage
 \include{titel}
-\include{titel}
+% \include{titel}
 \newpage
 % \pagestyle{fancy}
 %Inhaltsverzeichnis
