some formulas nothing special

--- a/lesson1.tex
+++ b/lesson1.tex
@@ -463,7 +463,7 @@ $$ \frac{a^n} {b^n} = \left(\frac{a} {b} \right)^n. \: b \neq 0.$$
 $$ x = d\cdot 10^e$$
 
 \begin{itemize}
-    \item $d$: Mantisse\footnote{ von Lateinisch 'Zugabe' oder 'Gewinn'. Siehe \cite{wiki:mantisse.}}
+    \item $d$: Mantisse\footnote{ von Lateinisch 'Zugabe' oder 'Gewinn'. Siehe \cite{wiki:mantisse}}
     \item $e$: Exponent
 \end{itemize}
 }
