--- a/main.tex
+++ b/main.tex
@@ -453,7 +453,7 @@ literate={ϵ}{$\epsilon$}1
 % \include{03_zusammenfassung}
 
 \newpage
-\include{titel}
+% \include{titel}
 \include{titel}
 \newpage
 % \pagestyle{fancy}
