--- a/references.bib
+++ b/references.bib
@@ -30,7 +30,8 @@
   title = "Introduction to Digital Filters with Audio Applications",
   url = "https://ccrma.stanford.edu/\~jos/filters/",
   year = {2007},
-  note = "online book, accessed 2024"
+  note = "online book, accessed 2024",
+  publisher={Julius O. Smith}
 }
 
 @article{liski2019converting,
