--- a/Anhang_A.tex
+++ b/Anhang_A.tex
@@ -116,7 +116,8 @@
 
 
 \mygrid{Analysis}{
-    $\int uv' = uv - \int vu'$ & $(u\cdot v)' = u'v + uv'$\\ \hline
+    $\int uv' = uv - \int vu'$ & $(u\cdot v)' = u'v + uv'$ \\ \hline
+    $\frac{d}{dx}(a^x) = a^x \cdot ln(a)$ \\ \hline
     $\int_a^b f(x) \, dx = F(b) - F(a)$ & $\lim_{x \to 0} \frac{\sin x}{x} = 1$ \\ \hline
     $e^{i\pi} + 1 = 0$ & $\frac{d}{dx}(e^x) = e^x$ & $\int e^x \, dx = e^x + C$
 
