--- a/lesson3.tex
+++ b/lesson3.tex
@@ -1,2 +1,9 @@
 %!TEX root = main.tex
 \chapter{Komplexe Zahlen} \label{chap:complex}
+
+
+Komplexe Zahlen haben äusserst grosse Wichtigkeit in der Beschreibung von Harmonischen Schwingungen und daher natürlich grosse wichtigkeit in der Audio Domäne.  
+
+% \begin{equation}
+% z = a + bi
+% \end{equation}
